--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <link rel="shortcut icon" href="/favicon.ico">
 <link rel="stylesheet" href="./style.css">
-<script src="./script.js" defer></script>
+<script src="./main.js" type="module"></script>
 <title>Towers battle</title>
 </head>
 <body>
