Create btn Play/Pause and add logic for pause and play

--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
 </head>
 <body>
 <canvas id="canvas" class="blur"></canvas>
+<button class="play">PLAY</button>
+<button class="stop">PAUSE</button>
 </body>
 </html>
