--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
 <canvas id="canvas" class="blur"></canvas>
+<img src="./source/sprites/Cacodaemon Sprite Sheet (1).png" hidden id="deamon" alt="">
 <button class="play">PLAY</button>
 <button class="stop">PAUSE</button>
 </body>
