--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <canvas id="canvas" class="blur"></canvas>
-<img src="./source/sprites/Cacodaemon Sprite Sheet (1).png" hidden id="deamon" alt="">
+<img src="./source/sprites/Demon.png" hidden id="deamon" alt="">
 <img src="./source/sprites/Download55283.png" hidden id="scelet" alt="">
 <button class="play">PLAY</button>
 <button class="stop">PAUSE</button>
