--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 </head>
 <body>
 <canvas id="canvas" class="blur"></canvas>
-<img src="./source/sprites/Cacodaemon Sprite Sheet (1).png" hidden id="deamon" alt="">
-<img src="./source/sprites/Download55283.png" hidden id="scelet" alt="">
+<img src="./source/sprites/Demon.png" hidden id="demon" alt="Demon">
+<img src="./source/sprites/Skeleton.png" hidden id="skeleton" alt="Skeleton">
+<img src="./source/sprites/Zombie.png" hidden id="zombie" alt="Zombie">
+<img src="./source/sprites/Lizard.png" hidden id="lizard" alt="Lizard">
 <button class="play">PLAY</button>
 <button class="stop">PAUSE</button>
 </body>
