Add dragon unit and add castle sprite sheet

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 <img src="./source/sprites/Skeleton.png" hidden id="skeleton" alt="Skeleton">
 <img src="./source/sprites/Zombie.png" hidden id="zombie" alt="Zombie">
 <img src="./source/sprites/Lizard.png" hidden id="lizard" alt="Lizard">
+<img src="./source/sprites/Dragon.png" hidden id="dragon" alt="Dragon">
+<img src="./source/sprites/Castle.png" hidden id="castleLeft" alt="Castle">
 <button class="play">PLAY</button>
 <button class="stop">PAUSE</button>
 </body>
