--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <img src="./source/sprites/Zombie.png" hidden id="zombie" alt="Zombie">
     <img src="./source/sprites/Lizard.png" hidden id="lizard" alt="Lizard">
     <img src="./source/sprites/Dragon.png" hidden id="dragon" alt="Dragon">
-    <img src="./source/sprites/Castle.png" hidden id="castleLeft" alt="Castle">
+    <img src="./source/sprites/Castle.png" hidden id="castle" alt="Castle">
   </section>
   <section class="buttonsControls">
     <button class="play buttonAnimate"><span class="buttonAnimate__text">PLAY</span></button>
