Created banner for start game. Fix score for left tower in Game.js

--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
 <title>Towers battle</title>
 </head>
 <body>
+	<div class="banner">
+		<div class="access">
+			<div class="confirm">
+				<p class="confirm__text">Are u like video game?</p>
+				<input type="button" value="Yes">
+				<input type="button" value="No">
+			</div>
+		</div>
+	</div>
   <header class="header">
     <h2 class="gameLogo">Towers battle</h2>
   </header>
