--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 		<div class="access">
 			<div class="confirm">
 				<p class="confirm__text">Are u like video game?</p>
-				<input type="button" value="Yes">
-				<input type="button" value="No">
+				<input type="button" class="confirm__button" value="Yes">
+				<input type="button" class="confirm__button" value="No">
 			</div>
 		</div>
 	</div>
