Create bunner if client has slow network

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<div class="banner">
 		<div class="access">
 			<div class="confirm">
+				<div class="notLoad"><p>Please wait, it's loading</p></div>
 				<p class="confirm__text">Are u like video game?</p>
 				<input type="button" value="Yes">
 				<input type="button" value="No">
